--- a/devII/src/app/modules/aluno/solicitacoes-aluno/lista-solicitacoes-aluno/lista-solicitacoes-aluno.component.html
+++ b/devII/src/app/modules/aluno/solicitacoes-aluno/lista-solicitacoes-aluno/lista-solicitacoes-aluno.component.html
@@ -20,7 +20,7 @@
 
   <ng-template #semSolicitacoes>
     <div class="semSolicitacoes">
-      <p>Você nao tem solicitações</p>
+      <p>Você não tem solicitações cadastradas.</p>
     </div>
   </ng-template>
 </div>
