--- a/devII/src/app/modules/aluno/solicitacoes-aluno/solicitacao/dialogs/enviar-documentos-solicitacao/enviar-documentos-solicitacao.component.html
+++ b/devII/src/app/modules/aluno/solicitacoes-aluno/solicitacao/dialogs/enviar-documentos-solicitacao/enviar-documentos-solicitacao.component.html
@@ -1,8 +1,8 @@
 <h1 class="titulo">{{data.tipo == 'relatorio' ? ' Envio de relatório final' : ' Solicitação de cancelamento de estágio'}}</h1>
  <div class="container">
     <p class="descricao">
-        {{data.tipo == 'relatorio' ? 'Envie o relatório final de atividades para avaliação do coornedador de curso.' 
-        : 'Envie o requerimento de cancelamento de estágio para que o possa ser validado, assim que for deferido o estágio será marcado como
+        {{data.tipo == 'relatorio' ? 'Caso seu estágio tenha acabado envie por aqui o relatório final de atividades para avaliação do coornedador de curso.' 
+        : 'Envie o requerimento de cancelamento de estágio para que o possa ser validado, assim que for aprovado o estágio será marcado como
         cancelado no sistema.'}}
     </p>
     <p class="msgErro">{{msgErro}}</p>
