--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.scss
@@ -153,9 +153,10 @@ button{
 
 .observacao{
   border: 1px solid;
+  border-radius: 5px;
   margin: 30px 50px;
-  font-size: 18px;
-  background-color: #cacaca78;
+  font-size: 1.1em;
+  background-color: #e2e2e278;
   width: 55%;
   padding: 10px;
 }
