--- a/devII/src/app/modules/aluno/formulario-cadastro-aluno/formulario-cadastro-aluno.component.html
+++ b/devII/src/app/modules/aluno/formulario-cadastro-aluno/formulario-cadastro-aluno.component.html
@@ -4,15 +4,33 @@
 
 <div class="formulario">
   <form (ngSubmit)="enviarFormulario()" class="formulario--centro">
-      <div class="formularioBox">
+    <div class="formularioBox">
       <label class="nome-campo">Nome Completo</label>
-      <input class="nome" type="text" name="fname" [(ngModel)]="aluno.nomeCompleto" placeholder="Nome Completo">
+      <input
+        class="nome"
+        type="text"
+        name="fname"
+        [(ngModel)]="aluno.nomeCompleto"
+        placeholder="Nome Completo"
+      />
 
       <label class="nome-campo">Email institucional</label>
-      <input class="email" type="text" name="fname" [(ngModel)]="aluno.usuarioSistema.email" placeholder="aluno@restinga.ifrs.edu.br">
+      <input
+        class="email"
+        type="text"
+        name="fname"
+        [(ngModel)]="aluno.usuarioSistema.email"
+        placeholder="aluno@restinga.ifrs.edu.br"
+      />
 
       <label for="turno">Turno</label>
-      <select id="turno" name="turno" type="text" [(ngModel)]="aluno.turno" required>
+      <select
+        id="turno"
+        name="turno"
+        type="text"
+        [(ngModel)]="aluno.turno"
+        required
+      >
         <option value="">Selecione o turno</option>
         <option value="Manhã">Manhã</option>
         <option value="Tarde">Tarde</option>
@@ -20,42 +38,71 @@
       </select>
 
       <ul>
-        <li style="padding-right: 39px;">
+        <li style="padding-right: 39px">
           <label for="matricula">Matrícula</label>
-          <input type="text" id="matricula" name="matricula" (input)="onInput($event)" [maxlength]="10" [(ngModel)]="aluno.matricula" placeholder="Matrícula" required>
+          <input
+            type="text"
+            id="matricula"
+            name="matricula"
+            (input)="onInput($event)"
+            [maxlength]="10"
+            [(ngModel)]="aluno.matricula"
+            placeholder="Matrícula"
+            required
+          />
         </li>
       </ul>
 
       <label for="curso">Curso</label>
-      <select name="curso" id="curso" type="text" [(ngModel)]="aluno.curso" required>
+      <select
+        name="curso"
+        id="curso"
+        type="text"
+        [(ngModel)]="aluno.curso"
+        required
+      >
         <option value="" disabled>Escolha um Curso</option>
-        <option value="10">Análise e Desenvolvimento de Sistemas</option>
-        <option value="11">Letras Português e Espanhol</option>
-        <option value="12">Eletrônica Industrial</option>
-        <option value="13">Gestão Desportiva e de Lazer</option>
-        <option value="14">Processos Gerenciais</option>
-        <option value="17">Lazer</option>
-        <option value="18">Informática</option>
-        <option value="19">Eletrônica</option>
+        <option
+          value="{{ curso.id }}"
+          *ngFor="let curso of cursos"
+          [disabled]="!curso.ativo"
+          [class]="!curso.ativo ? 'desativado' : ''"
+        >
+          {{ curso.nomeCurso }}
+        </option>
       </select>
 
       <div class="senhadiv">
         <ul>
-          <li style="padding-right: 39px;">
-          <label class="nome-campo">Digite uma senha</label>
+          <li style="padding-right: 39px">
+            <label class="nome-campo">Digite uma senha</label>
 
-          <input class="senha" type="password" name="lname" [(ngModel)]="aluno.usuarioSistema.senha" placeholder="Senha" required>
+            <input
+              class="senha"
+              type="password"
+              name="lname"
+              [(ngModel)]="aluno.usuarioSistema.senha"
+              placeholder="Senha"
+              required
+            />
           </li>
 
           <li>
-          <label class="nome-campo">Confirmar senha</label>
+            <label class="nome-campo">Confirmar senha</label>
 
-          <input class="senha" type="password" name="lname" [(ngModel)]="confirmarSenha" placeholder="Confirmar Senha" required>
-        </li>
+            <input
+              class="senha"
+              type="password"
+              name="lname"
+              [(ngModel)]="confirmarSenha"
+              placeholder="Confirmar Senha"
+              required
+            />
+          </li>
         </ul>
       </div>
 
-      <input class="botao" type="submit" value="Cadastrar">
+      <input class="botao" type="submit" value="Cadastrar" />
     </div>
   </form>
 </div>
