--- a/devII/src/app/modules/servidor/Listas/solicitacao-estagios-lista/tipos/lista-solicitacoes-servidor/estagios/lista-solicitacoes-servidor.component.scss
+++ b/devII/src/app/modules/servidor/Listas/solicitacao-estagios-lista/tipos/lista-solicitacoes-servidor/estagios/lista-solicitacoes-servidor.component.scss
@@ -3,32 +3,13 @@
   margin-top: 20px;
 }
 
-.tituloprincipal {
-  font-size: 28px;
-  font-weight: bold;
-  color: #000000;
-  display: flex;
-  padding: 2% 2% 0% 5%;
-  align-items: flex-start;
-  grid-template-columns: auto 1fr auto;
-  grid-gap: 10px;
-  flex-direction: column;
-}
+
 
 active{
   background-color: #371d73;
   color: #fff;
 }
 
-.cardDecoracao1 {
-  width: 264px;
-  height: 3px;
-  left: 123px;
-  top: 314px;
-  background-color: #2B923C;
-  border: 1px solid #2B923C;
-  margin-top: 6px;
-}
 
 .form-control {
   width: 130%;
@@ -87,17 +68,19 @@ active{
 
 .filtro-container {
   text-align: center;
+  width: 100%;
+  margin-top: 20px;
 }
 
 .filtro-row {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
-  gap: 10px;
   align-self: flex-start;
   flex-direction: row;
-  margin: 0% 10% 0% 0%;
+  gap: 0.2em;
 }
+
 .filtro-wrapper {
   display: flex;
   align-items: center;
@@ -120,6 +103,7 @@ active{
   line-height: 1.5;
   color: #6a737b;
 }
+
 
 .filtro-status {
   vertical-align: middle;
