--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.html
@@ -23,7 +23,7 @@
       <div class="etapa">
         <span class="emAndamento" *ngIf="solicitacao.historico[1].etapa == 2 && solicitacao.etapa == 2 && solicitacao.status !== 'Indeferido'">*Em Análise*</span>
 
-          <span class="etapaDeferido" *ngIf="solicitacao.historico[1].etapa == 2 && solicitacao.etapa > 2">*Deferido*</span>
+          <span class="etapaDeferido" *ngIf="solicitacao.historico[1].etapa == 2 && solicitacao.etapa > 2">*Aprovado*</span>
 
           <span class="etapaIndeferido" *ngIf="solicitacao.historico[1].etapa == 3 && solicitacao.etapa == 2 && solicitacao.status === 'Indeferido'">*Indeferido*</span>
       </div>
@@ -35,7 +35,7 @@
       <div class="etapa">
         <span class="emAndamento" *ngIf="solicitacao.historico[2].etapa == 3 && solicitacao.etapa == 3 && solicitacao.status !== 'Indeferido'">*Em Análise*</span>
 
-          <span class="etapaDeferido" *ngIf="solicitacao.historico[2].etapa == 3 && solicitacao.etapa > 3">*Deferido*</span>
+          <span class="etapaDeferido" *ngIf="solicitacao.historico[2].etapa == 3 && solicitacao.etapa > 3">*Aprovado*</span>
 
           <span class="etapaIndeferido" *ngIf="solicitacao.historico[2].etapa == 3 && solicitacao.etapa == 3 && solicitacao.status === 'Indeferido'">*Indeferido*</span>
       </div>
@@ -48,7 +48,7 @@
       <div class="etapa">
         <span class="emAndamento" *ngIf="solicitacao.historico[3].etapa == 4 && solicitacao.etapa == 4 && solicitacao.status !== 'Indeferido'">*Em Análise*</span>
 
-        <span class="etapaDeferido" *ngIf="solicitacao.historico[3].etapa == 4 && solicitacao.etapa > 4">*Deferido*</span>
+        <span class="etapaDeferido" *ngIf="solicitacao.historico[3].etapa == 4 && solicitacao.etapa > 4">*Aprovado*</span>
 
         <span class="etapaIndeferido" *ngIf="solicitacao.historico[3].etapa == 4 && solicitacao.etapa == 4 && solicitacao.status === 'Indeferido'">*Indeferido*</span>
       </div>
@@ -61,7 +61,7 @@
       <div class="etapa">
         <!-- <span class="emAndamento" *ngIf="solicitacao.historico[3].etapa == 5 && solicitacao.etapa == 5 && solicitacao.status.toLowerCase() !== 'indeferido'">*Em Análise*</span> -->
 
-          <span class="etapaDeferido" *ngIf="solicitacao.historico[4].etapa == 5 && solicitacao.etapa == 5 && solicitacao.status == 'Deferido'">*Deferido*</span>
+          <span class="etapaDeferido" *ngIf="solicitacao.historico[4].etapa == 5 && solicitacao.etapa == 5 && solicitacao.status == 'Aprovado'">*Aprovado*</span>
 
           <span class="etapaIndeferido" *ngIf="solicitacao.historico[4].etapa == 5 && solicitacao.etapa == 5 && solicitacao.historico[3].status === 'Indeferido'">*Indeferido*</span>
       </div>
@@ -75,7 +75,7 @@
 
   <div *ngIf="solicitacao.observacao !== undefined && solicitacao.observacao !== null">
     <div class="observacao">
-      <p><b>Observação:</b> {{ solicitacao.observacao }}</p>
+      <p><b>Observação atual:</b> {{ solicitacao.observacao }}</p>
     </div>
   </div>
 
