--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/modal-analise/modal-analise.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/modal-analise/modal-analise.component.scss
@@ -4,7 +4,7 @@
   .title {
     display: flex;
     justify-content: center;
-    font-size: 30px;
+    font-size: 1.8em;
     font-weight: bolder;
   }
 
