--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.scss
@@ -5,7 +5,7 @@
 .card {
   padding: 2px 20px 0px 20px;
   font-weight: 500;
-  margin: 0% 10% 0% 10%;
+  margin: 0% 10% 0% 5%;
   background: #FFFFFF;
   border: 1px solid rgba(0, 0, 0, 0.2);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -18,6 +18,14 @@
   font-size: 18px;
 }
 
+.avisos{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 13px;
+  font-size: 1em;
+
+}
 
 
 .retangulo {
@@ -34,6 +42,8 @@
   padding-left: 13px;
   font-size: 1.3em;
 }
+
+
 
 .cardDecoracao2 {
   width: 10%;
@@ -61,6 +71,9 @@
 .conteudo{
   display: flex;
 }
+.coluna{
+  flex-direction: column;
+}
 
 .cardPendente{
   background-color: #ffbebe;
@@ -78,7 +91,7 @@
 .buttonContainer {
   width: 50%;
   display: flex;
-  // padding: 16px;
+  flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
 }
