--- a/devII/src/app/modules/servidor/lista-estagiarios/lista-estagiarios.component.scss
+++ b/devII/src/app/modules/servidor/lista-estagiarios/lista-estagiarios.component.scss
@@ -33,6 +33,9 @@
       border-bottom: 4px solid #2b923c;
       padding-bottom: 8px;
   }
+  section{
+    margin-left: 1%;
+  }
 }
 
 .table-container {
@@ -44,6 +47,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 1%;
+    margin-right: 1%;
 
   }
 
@@ -53,6 +58,8 @@
   }
   .selectDoFiltro{
     margin: 0px;
+    margin-left: 5px;
+    
     padding: 0px !important;
   }
 
@@ -80,8 +87,9 @@
   }
 
   .hoverBuscadores:hover{
-    background-color: #43970ac0;
+    background-color: #358501;
     border-radius: 5px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 78, 20, 0.61);
     color: #fff;
   }
 
@@ -92,8 +100,7 @@
   }
 
   input{
-    width: 50%;
-    max-width: 150px;
+    width: 10%;
     height: 30px;
     border-radius: 5px;
     border: 1px solid #ccc;
@@ -105,6 +112,11 @@
     justify-content: left;
     align-items: center;
     width: 35%;
+  }
+
+  .colunaBusca{
+    display: flex;
+    gap: 5%;
   }
 
   
@@ -149,10 +161,10 @@
   }
 
   table th{
-    font-family: Roboto, sans-serif, 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 1.1em;
-    color: #fff;
-    font-weight: unset;
+    font-family: 'Roboto', sans-serif, 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: #2b923c !important;
+    font-size: medium;
+    color: white;
   }
   .filtros{
     display: flex;
