--- a/devII/src/app/modules/servidor/lista-servidor/lista-servidor.component.scss
+++ b/devII/src/app/modules/servidor/lista-servidor/lista-servidor.component.scss
@@ -1,38 +1,25 @@
-.card {
-  padding: 2px 20px 0px 20px;
-  font-weight: 500;
-  width: calc(99% - 20px);
-  height: 3em;
-  border: 0px solid rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  font-size: large;
-  display: flex;
-  gap: 5px;
-  justify-content: space-between;
-  margin: 1ch;
-  align-items: center;
-  text-align: center;
-
-
-}
-
-.voltar{
+.voltar {
   padding: 15px;
 }
 
-li{
-  list-style: none;
-  &:nth-child(even) {
-    background: #e9e9e9;
-  }
+tr:nth-child(odd) td {
+  background-color: #f0f0f0;
+}
+tr:nth-child(even) td {
+  background-color: white;
+}
 
-  &:nth-child(odd) {
-    background: #f1f1f1;
-  }
+.rowDiv{
+    justify-content: space-around;
+    margin-bottom: 1%;
+    width: 100%;
+    display: flex;
+    gap: 2em;
+    flex-direction: row;
 }
 
 .titulo {
-  padding: 30px;
+  padding: 15px;
   display: flex;
   justify-content: center;
 
@@ -44,6 +31,10 @@ li{
   }
 }
 
+.selectDoFiltro{
+  width: 50%;
+}
+
 h1 {
   font-size: 1.5em;
   font-weight: bolder;
@@ -51,31 +42,26 @@ h1 {
   align-self: center;
 }
 
-.cardHeader {
-  font-weight: bolder;
-  font-size: 1.5em !important;
-}
-
-.espacamento {
-  margin-bottom: 25px;
-}
-
-.nome,
-.curso,
-.email,
-.cargo,
-.acoes {
-  margin-left: 5%;
-  width: 15%;
-}
-
 button {
   border: 0px solid #000000;
-  background: #2F9E41;
+  background: #2f9e41;
   font-style: normal;
   font-size: 25px;
   border-radius: 5px;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-right: 5px;
   cursor: pointer;
+}
+
+.container{
+  margin-left: 10%;
+  margin-bottom: 3%;
+  width: 80%;
+}
+
+table th{
+  font-family: 'Roboto', sans-serif, 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  background-color: #2b923c !important;
+  font-size: medium;
+  color: white;
 }
