--- a/devII/src/styles.scss
+++ b/devII/src/styles.scss
@@ -14,6 +14,6 @@ body {
 }
 
 .btVerde {
-  background-color: green !important;
+  background-color: #2F9E41 !important;
   color: white !important;
 }
